<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_general"
        android:title="@string/pref_header_general">

        <ListPreference
            android:key="pref_key_display_language"
            android:negativeButtonText="@string/cancel_button"
            android:title="@string/pref_title_display_language" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_beta_packages"
            android:summary="@string/pref_description_beta_packages"
            android:title="@string/pref_title_beta_packages" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_mark_unknown"
            android:summary="@string/pref_description_mark_unknown"
            android:title="@string/pref_title_mark_unknown" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_auto_tts"
            android:summary="@string/pref_description_auto_tts"
            android:title="@string/pref_title_auto_tts" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="pref_key_updates"
        android:title="@string/pref_header_updates">
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_autocheck_updates"
            android:summary="@string/pref_description_autocheck_updates"
            android:title="@string/pref_title_autocheck_updates" />
        
        <Preference
            android:key="pref_key_check_updates"
            android:summary="@string/pref_description_check_updates"
            android:title="@string/pref_title_check_updates" />
        
    </PreferenceCategory>


    <PreferenceCategory
        android:key="pref_key_advanced"
        android:title="@string/pref_header_advanced">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_external_storage"
            android:summary="@string/pref_description_external_storage"
            android:title="@string/pref_title_external_storage" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_signature_verification"
            android:summary="@string/pref_description_signature_verification"
            android:title="@string/pref_title_signature_verification" />

    </PreferenceCategory>


    <!--PreferenceCategory
        android:title="@string/pref_header_development"
        android:key="pref_key_development">

        <CheckBoxPreference
            android:key="pref_key_ocr_debugging"
            android:summary="@string/pref_description_ocr_debugging"
            android:title="@string/pref_title_ocr_debugging"
            android:defaultValue="false" />

    </PreferenceCategory-->
    
    
    <PreferenceCategory
        android:key="pref_key_about"
        android:title="@string/pref_header_about">

        <Preference
            android:key="pref_key_licenses"
            android:summary="@string/pref_description_licenses"
            android:title="@string/pref_title_licenses" />

        <Preference
            android:key="pref_key_acknowledgments"
            android:summary="@string/pref_description_acknowledgments"
            android:title="@string/pref_title_acknowledgments" />

    </PreferenceCategory>
    
</PreferenceScreen>
